1998-03-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* win32dib.h: Declare new function dib_copy. 
	Uncomment dib_{un}lock.

	* win32dib.c (dib_fill): Make frameWidth even if it isn't.
	Include starting y offset in base.  
	(dib_{un}lock): Uncomment.
	(dib_copy): New function.

	* internal.m (tkobjc_raster_erase): Reserve 255/black for erasing
	rather than using temporary colormap.
	(tkobjc_raster_copy): Use new function dib_copy to copy
	old pixmap.

1998-03-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tkobjc.h: Don't include XPixmap when _WIN32.

	* internal.m: Remove dummy Tcl_{Create,Delete}FileHandler for
	unused BLT bgExec support.

1998-03-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.h: Move inclusion of Raster and Colormap after inclusion
	of tk.h.

1998-03-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayHideButton.m (tkobjc_configureWidgetToDrop): Send
	markForDrop, not drop.

	* win32dib.c: Include win32dib.h not dib.h.

	* Makefile (BACKEND_{H,O}): Renamed from XPIXMAP_{H,O}.  Include
	win32dib.[hm] for gnu-win32.

	* internal.m (Colormap): Define as X11Colormap during inclusion
	of tkWinInt.h.
	(tkobjc_raster_createPixmap): Use renamed tkobjc_raster_setColormap.

	* Makefile: Remove defines for Tk headers.  Make a rule
	for internal.o.
	(XPIXMAP_{H,O}): Define conditionally on MACHTYPE vs i386-pc-cygwin32.

	* internal.m: Include win32dib.h and Tk internal header files only
	if _WIN32.  Include <misc.h>.
	(Xfill): New function.
	(tkobjc_raster_fillRectangle}): Use dib_fill in Win32 case and
	Xfill in X case.
	(tkobjc_raster_erase): In Win32 case, setup a temporary colormap
	and use tkobjc_raster_fillRectangle with index of 0 to erase. 
	In X case, use Xfill.
	(tkobjc_raster_drawPoint,tkobjc_setColormap): New functions.
	(tkobjc_raster_createPixmap, tkobjc_raster_flush): Handle Win32
	case.
	(tkobjc_raster_copy): Disabled in Win32 case.
	(XDrawPoint, XCreatePixmap, XFreePixmap): Remove.
